--- a/template.yaml
+++ b/template.yaml
@@ -1,7 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: Secure Banking App - GetStatementLambda
-
 Globals:
   Function:
     Timeout: 10
@@ -14,7 +13,7 @@ Resources:
     Properties:
       FunctionName: GetStatementLambda
       Handler: app.lambda_handler
-      CodeUri: getStatement/
+      CodeUri: GetStatementFunction/
       MemorySize: 128
       Environment:
         Variables:
