--- a/template.yaml
+++ b/template.yaml
@@ -18,12 +18,12 @@ Resources:
       MemorySize: 128
       Environment:
         Variables:
-          BUCKET_NAME: your-bucket-name
+          BUCKET_NAME: securestoragebankingdocumentsfinal
       Policies:
         - Statement:
             - Effect: Allow
               Action: s3:GetObject
-              Resource: arn:aws:s3:::your-bucket-name/statements/*
+              Resource: arn:aws:s3:::securestoragebankingdocumentsfinal/statements/*
       Events:
         GetStatementApi:
           Type: HttpApi
