--- a/.aws-sam/build.toml
+++ b/.aws-sam/build.toml
@@ -9,4 +9,13 @@ manifest_hash = ""
 packagetype = "Zip"
 functions = ["GetStatementFunction"]
 
+[function_build_definitions.137cbb78-c4a1-496f-9573-e4d96d5bd8c9]
+codeuri = "C:\\Users\\Tgthe\\pythonProjects\\AWS Lambda Functions\\GetUserProfileLambda"
+runtime = "python3.11"
+architecture = "x86_64"
+handler = "app.lambda_handler"
+manifest_hash = ""
+packagetype = "Zip"
+functions = ["GetUserProfileFunction"]
+
 [layer_build_definitions]
