--- a/.aws-sam/build.toml
+++ b/.aws-sam/build.toml
@@ -18,4 +18,13 @@ manifest_hash = ""
 packagetype = "Zip"
 functions = ["GetUserProfileFunction"]
 
+[function_build_definitions.fa805d9a-f208-4137-9c71-649707cda7da]
+codeuri = "C:\\Users\\Tgthe\\pythonProjects\\AWS Lambda Functions\\UpdateUserProfileLambda"
+runtime = "python3.11"
+architecture = "x86_64"
+handler = "app.lambda_handler"
+manifest_hash = ""
+packagetype = "Zip"
+functions = ["UpdateUserProfileFunction"]
+
 [layer_build_definitions]
